no cam settings on students and fix students list z-index

--- a/public/css/wp-agora-fullscreen.css
+++ b/public/css/wp-agora-fullscreen.css
@@ -131,6 +131,7 @@ html { height: auto !important; }
   margin: 0 auto;
   top: -12px;
   left: calc(50% - 50px);
+  z-index: 10;
 }
 
 .card {
